--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(php_myhtml)
 
 set(CMAKE_C_STANDARD 99)
 
+include_directories(/usr/include/libxml2)
 include_directories(/usr/include/php/20151012)
 include_directories(/usr/include/php/20151012/TSRM)
 include_directories(/usr/include/php/20151012/Zend)
@@ -10,5 +11,5 @@ include_directories(/usr/include/php/20151012/ext)
 include_directories(/usr/include/php/20151012/main)
 include_directories(/usr/include/php/20151012/sapi)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES src/myhtml.c)
 add_executable(php_myhtml ${SOURCE_FILES})
